4.5/_sources/translators.txt
.. csv-table::

  
  
  
  Language,i18n code, Name, Country, Email, Osgeo_id
  Spanish,es,Javier Sanchez,Spain,jsgisdev gmail com,jsanchez
  Spanish,es,Jorge Sanz,Spain,jsanz osgeo org,
  Spanish,es,Valenty Gonzalez,Venezuela,vgonzalez gvsig com,gvalenty
  Italian,it,Massimo Di Stefano,Italy,massimodisasha gmail com,
  Italian,it,Marco Puppin,Italy,puppingeo gmail com,
  Italian,it,Anne Ghisla,Italy,a ghisla gmail com,aghisla
  German,de,Astrid Emde,Germany,astrid emde wheregroup com,astrid_emde
  German,de,Daniel Kastl,Germany,daniel georepublic de,
  German,de,Lars Lingner,Germany,lars lingner eu,gislars
  German,de,Otto Dassau,Germany,dassau gbd-consult de,dassau
  German,de,Ruth Schoenbuchner,Germany,ruth schoenbuchner csgis de,
  German,de,Thomas Baschetti,Germany,info thomas-baschetti de,tbaschetti
  Greek,el,Angelos Tzotsos,Greece,tzotsos gmail com,kalxas
  Greek,el,Christos Iossifidis,Greece,chiossif gmail com,chiossif
  Greek,el,Argyros Argyridis,Greece, arargyridis gmail com, Argy7
  Greek,el,Aikaterini Kapsampeli,Greece, kapsamp mail ntua gr,topometal
  Japanese,ja,Haruyuki Seki,Japan,hal georepublic.co jp,
  Japanese,ja,Nobusuke Iwasaki,Japan,wata909 gmail com,
  Japanese,ja,Yoichi Kayama,Japan,yoichi.kayama gmail com,
  Polish,pl,Milena Nowotarska,Poland,do.milenki gmail com,milenan,
