5.0/_sources/translators.txt
.. csv-table::

  
  
  
  Language,i18n code, Name, Country, Email, Osgeo_id
  Spanish,es,Agustín Díez,Spain,adiez uv es,
  Spanish,es,David "Terrativa",Spain,porquewhich hotmail com,
  Spanish,es,Hernan Olivera,Argentina,lholivera gmail com,hernanolivera
  Spanish,es,Javier Sanchez,Spain,jsgisdev gmail com,jsanchez
  Spanish,es,Jesús Gómez,Spain,je_gomez terra es,
  Spanish,es,Jorge Sanz,Spain,jsanz osgeo org,jsanz
  Spanish,es,José Antonio Canalejo,Germany,jacanalejo yahoo es,
  Spanish,es,Mauricio Miranda,Argentina,mmiranda xoomcode com,
  Spanish,es,Mauricio Pazos,Spain,mauricio.pazos gmail com,mpazos
  Spanish,es,Òscar Fonts,Spain,oscar.fonts gmail com,oscarfonts
  Spanish,es,Pedro-Juan Ferrer,Spain,pferrer osgeo org,pferrer
  Spanish,es,Samuel Mesa,Colombia,samuelmesa gmail com,
  Spanish,es,Valenty Gonzalez,Venezuela,vgonzalez gvsig com,gvalenty
  Spanish,es,Lucía Sanjaime,Spain,llusancal gmail com,
  Spanish,es,Andrea Yanza,???,andreavyanzah gmail com,
  Spanish,es,Diego González,???,iberdiego gmail com,
  Italian,it,Anne Ghisla,Italy,a ghisla gmail com,aghisla
  Italian,it,Massimo Di Stefano,Italy,massimodisasha gmail com,
  Italian,it,Marco Puppin,Italy,puppingeo gmail com,
  German,de,Astrid Emde,Germany,astrid emde wheregroup com,astrid_emde
  German,de,Daniel Kastl,Germany,daniel georepublic de,
  German,de,Dominik Helle,Germany,helle omniscale de,
  German,de,Lars Lingner,Germany,lars lingner eu,gislars
  German,de,Otto Dassau,Germany,dassau gbd-consult de,dassau
  German,de,Ruth Schoenbuchner,Germany,ruth schoenbuchner csgis de,
  German,de,Thomas Baschetti,Germany,info thomas-baschetti de,tbaschetti
  German,de,Frank Gasdorf,Germany,fgdrf users.sourceforge.net,fgdrf
  Greek,el,Angelos Tzotsos,Greece,tzotsos gmail com,kalxas
  Greek,el,Christos Iossifidis,Greece,chiossif gmail com,chiossif
  Greek,el,Argyros Argyridis,Greece, arargyridis gmail com, Argy7
  Greek,el,Aikaterini Kapsampeli,Greece, kapsamp mail ntua gr,topometal
  Japanese,ja,Haruyuki Seki,Japan,hal georepublic.co jp,
  Japanese,ja,Nobusuke Iwasaki,Japan,wata909 gmail com,
  Japanese,ja,Yoichi Kayama,Japan,yoichi.kayama gmail com,
  Polish,pl,Milena Nowotarska,Poland,do.milenki gmail com,milenan,
